[metadata]
name = dog_api_python
version = 1.0.2
author = Drew Gulino
author_email = dgulino@relaypro.com
description = dog python api client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/relaypro-open/dog_api_python
project_urls =
    Bug Tracker = https://github.com/relaypro-open/dog_api_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
